--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2"
   }
 }
